--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Cooka",
-  "name": "Cooka",
+  "short_name": "Cookit",
+  "name": "Cookit",
   "icons": [
     {
       "src": "favicon.ico",
