--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cooka",
+  "name": "cookit",
   "version": "1.0.0",
   "author": "Dmytrii Puzyr <slymahel@gmail.com>",
   "license": "MIT",
