--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,7 @@ TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=localhost
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=cooka
+TYPEORM_DATABASE=cookit
 TYPEORM_PORT=5432
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=false
