--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "workspaces": [
     "client",
     "server",
-    "shared"
+    "server/src/shared"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.24.0",
