--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
-    "sourceMap": true,
-    "module": "CommonJS",
+    "target": "es2018",
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src"
