--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.9.2",
+    "@types/yup": "^0.26.33",
     "class-validator": "^0.11.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
