Implement "View all recipes" page

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,12 @@
     "module": "esnext",
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin"
+      }
+    ],
   },
   "include": [
     "src"
