--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cookit/shared": "1.0.0",
+    "date-fns": "^2.11.0",
     "ky": "^0.19.0",
     "polished": "^3.5.0",
     "react": "^16.13.1",
@@ -32,7 +33,8 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "typescript-styled-plugin": "^0.15.0"
   },
   "browserslist": {
     "production": [
